Weird style issue on mobile Safari

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -24,10 +24,14 @@ ul {
 }
 
 article {
-    background-size: cover;
-    background-position: top center;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    
     padding: 3rem 1rem;
     border-radius: 8px;
     max-width: 800px;
